layout issues

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -119,4 +119,8 @@
     .min-h-screen-without-navbar {
         @apply min-h-[calc(100dvh-5rem)];
     }
+
+    .max-h-screen-without-navbar {
+        @apply max-h-[calc(100dvh-5rem)];
+    }
 }
